<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_app"
        android:title="@string/action_app_manager"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_apk"
        android:title="@string/action_apk_manager"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_process"
        android:title="@string/action_process_manager"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_service"
        android:title="@string/action_service_manager"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_anti_virus"
        android:title="@string/action_anti_virus"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
